--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <title>ThreeJS Starter</title>
 </head>
 <body>
+    <div class="content">
+        <h1>Moments of Earth</h1>
+    </div>
     <canvas class="webgl"></canvas>
 </body>
 </html>
